--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "randomstring": "^1.0.7",
     "sequelize": "^3.5.1",
     "serve-favicon": "~2.1.3",
-    "pg": "^4.1.1"
+    "pg": "^4.1.1",
+    "express-partials": "^0.3.0",
+    "mysql": "^2.7.0",
+    "pg-hstore": "^2.3.2",
+    
+ 
   }
 }
